<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_signUp"
            android:textStyle="normal|bold"
            android:textSize="@dimen/title"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.Toolbar>
</android.support.design.widget.AppBarLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.stach.app_test.SignUpActivity">
    <!--user email-->
    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />
    <!--password-->
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />
    <!--repeated password-->
    <EditText
        android:id="@+id/repPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_pass_repeate_signUp"
        android:inputType="textPassword" />
    <!--button for signup-->
    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:onClick="sendDataForSignUp"
        android:text="@string/btn_signUp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal" />
    <!--Only for padding-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--text or-->
    <TextView
        android:id="@+id/text_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_or"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <!--Only for padding-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--button for login-->
    <Button
        android:id="@+id/btnReturnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:onClick="returnToLogin"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal" />
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
