<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textStyle="normal|bold"
                android:textSize="@dimen/title"
                android:textColor="@color/white"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="com.example.stach.app_test.LoginActivity">
            <!--Only for padding-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--user email-->
            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />
            <!--password-->
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"

                android:inputType="textPassword" />
            <!--button for login-->

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:onClick="sendDataForLogin"
                android:text="@string/btn_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />
            <!--button for credentials-->
            <Button
                android:id="@+id/btnCredential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/btn_credentials"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="normal" />
            <!--button for signup-->
            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:onClick="goToSignUp"
                android:text="@string/btn_to_signUp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />
            <!--button for signup-->
            <Button
                android:id="@+id/btn_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:onClick="goToGps"
                android:text="@string/btn_to_gps"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
